Add Heroku deploy to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
   provider: heroku
   app: todo-checklist-react
   api_key:
-    secure: d3f6fdff-3b4a-46db-8eb0-a18388600dea
+    secure: "43738c9f-95f9-4f83-b8d4-75251c0ffddb"
