--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
   provider: heroku
   app: todo-checklist-react
   api_key:
-    secure: "R2foDeQHGOTSiVVBUp0Lmjq8tgkg41LNPifPGHXHsiOLx8KVVATDAVzMgvfdIJN0RyHMvdthdo5earvXMQ1ug0GzT+aS07MGitLKnmXuL83jq+idwiRbeQQhohNxXKTl61aYDeVyGSInhR5A4EWTn3w38aovuFPtjYfZQi9Nv60="
+    secure: 30ec8f37-efa7-4261-a564-1e727c64e33e
